# multi-robot-cleaning

./: README.md  instructions  send_map.launch
Create_Autonomy Modification/: create_driver.cpp  create_driver.h
imu_ros/: CMakeLists.txt  package.xml
imu_ros/src/: main.cpp
publish_goals/: CMakeLists.txt  package.xml
publish_goals/msg/: goals.msg
publish_goals/src/: A_star.cpp  divide_A_star.cpp
robot_0/: CMakeLists.txt  package.xml
robot_0/launch/: amcl.launch  group.launch  urg_node_180.launch
robot_1/: CMakeLists.txt  package.xml
robot_1/launch/: amcl.launch  group.launch  urg_node_180.launch
send/: CMakeLists.txt  package.xml
send/src/: subscribe_goal.cpp
